--- a/index.html
+++ b/index.html
@@ -193,14 +193,17 @@
       </section>
       <section>
         <h2 class="visually-hidden">Информация</h2>
-        <div>
-          <label for="delivery" class="visually-hidden">Доставка</label>
-          <input type="button" id="delivery" value="Доставка">
-          <label for="guarantee" class="visually-hidden">Гарантия</label>
-          <input type="button" id="guarantee" value="Гарантия">
-          <label for="credit" class="visually-hidden">Кредит</label>
-          <input type="button" id="credit" value="Кредит">
-        </div>
+        <ul>
+          <li>
+            <button type="button">Доставка</button>
+          </li>
+          <li>
+            <button type="button">Гарантия</button>
+          </li>
+          <li>
+            <button type="button">Кредит</button>
+          </li>
+        </ul>
         <div>
           <div>
             <h2>
