Добавляет контентные изображения

--- a/catalog.html
+++ b/catalog.html
@@ -4,12 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link rel="icon" href="favicon-32.ico">
+  <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon-180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
   <header>
     <a>
-      <img src="https://via.placeholder.com/163x35" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
+      <img src="img/logo.svg" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
     </a>
     <div>
       <div>
@@ -153,13 +157,13 @@
           <h2>Сортировка:</h2>
             <ul>
               <li>
-                <button type="button">По цене</button>
+                <a href="#">По цене</a>
               </li>
               <li>
-                <button type="button">По типу</button>
+                <a href="#">По типу</a>
               </li>
               <li>
-                <button type="button">По популярности</button>
+                <a href="#">По популярности</a>
               </li>
             </ul>
             <button type="button">
@@ -174,7 +178,7 @@
           <ul>
             <li>
               <div>
-                <img src="https://via.placeholder.com/360x380" alt="Любительская селфи-палка" width="360" height="380">
+                <img src="img/item-1 1.png" alt="Любительская селфи-палка" width="360" height="380">
                 <svg width="62" height="62"></svg>
                 <div>
                   <h3>
@@ -196,7 +200,7 @@
             </li>
             <li>
               <div>
-                <img src="https://via.placeholder.com/360x380" alt="Профессиональная селфи-палка" width="360" height="380">
+                <img src="img/item-2 1.png" alt="Профессиональная селфи-палка" width="360" height="380">
                 <svg width="62" height="62"></svg>
                 <div>
                   <h3>
@@ -218,7 +222,7 @@
             </li>
             <li>
               <div>
-                <img src="https://via.placeholder.com/360x380" alt="Непотопляемая селфи-палка" width="360" height="380">
+                <img src="img/item-3 1.png" alt="Непотопляемая селфи-палка" width="360" height="380">
                 <svg width="62" height="62"></svg>
                 <div>
                   <h3>
@@ -240,7 +244,7 @@
             </li>
             <li>
               <div>
-                <img src="https://via.placeholder.com/360x380" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
+                <img src="img/item-4 1.png" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
                 <svg width="62" height="62"></svg>
                 <div>
                   <h3>
@@ -264,9 +268,7 @@
         </section>
         <section>
           <h2 class="visually-hidden">Список страниц</h2>
-          <button type="button">
-            Назад
-          </button>
+          <a href="#">Назад</a>
           <ul>
             <li>
               <a href="#">1</a>
@@ -278,9 +280,7 @@
               <a href="#">3</a>
             </li>
           </ul>
-          <button type="button">
-            Вперед
-          </button>
+          <a href="#">Вперед</a>
         </section>
       </div>
     </div>
@@ -288,7 +288,7 @@
   <footer>
     <div>
       <a>
-        <img src="https://via.placeholder.com/163x35" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
+        <img src="img/logo-yellow.svg" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
       </a>
       <ul>
         <li>
@@ -360,6 +360,7 @@
       </section>
       <a href="https://htmlacademy.ru">
         <span class="visually-hidden">HTML Academy</span>
+        <img src="img/logo_htmlacademy.svg" alt="Логотип HTML Academy" width="115" height="33">
       </a>
     </div>
   </footer>
