--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link rel="icon" href="favicon-32.ico">
+  <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon-180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
   <header>
     <a>
-      <img src="https://via.placeholder.com/163x35" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
+      <img src="img/logo.svg" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
     </a>
     <div>
       <div>
@@ -82,7 +86,7 @@
       </div>
       <div>
         <section>
-          <img src="https://via.placeholder.com/384x486" alt="Квадрокоптер" width="384" height="486">
+          <img src="img/slider-3 1.png" alt="Квадрокоптер" width="384" height="486">
           <h3>
             Порхает как бабочка, жалит как пчела!
           </h3>
@@ -103,7 +107,7 @@
           </table>
         </section>
         <section>
-          <img src="https://via.placeholder.com/345x485" alt="Фитнес-браслет" width="345" height="485">
+          <img src="img/slider-2 1.png" alt="Фитнес-браслет" width="345" height="485">
           <h3>
             Худеем правильно!
           </h3>
@@ -121,7 +125,7 @@
           </table>
         </section>
         <section>
-          <img src="https://via.placeholder.com/384x486" alt="Монопод для селфи" width="384" height="486">
+          <img src="img/slider-1 1.jpg" alt="Монопод для селфи" width="384" height="486">
           <h3>
             Делай селфи, как Бен Стиллер!
           </h3>
@@ -235,16 +239,16 @@
       <h2 class="visually-hidden">Производители</h2>
       <ul>
         <li>
-          <img src="https://via.placeholder.com/260x100" alt="Логотип DJI" width="260" height="100">
+          <img src="img/logo-dji.png" alt="Логотип DJI" width="260" height="100">
         </li>
         <li>
-          <img src="https://via.placeholder.com/260x100" alt="Логотип SP Gadgets" width="260" height="100">
+          <img src="img/logo-sp.png" alt="Логотип SP Gadgets" width="260" height="100">
         </li>
         <li>
-          <img src="https://via.placeholder.com/260x100" alt="Логотип Go pro" width="260" height="100">
+          <img src="img/logo-gopro.png" alt="Логотип Go pro" width="260" height="100">
         </li>
         <li>
-          <img src="https://via.placeholder.com/260x100" alt="Логотип VIVE" width="260" height="100">
+          <img src="img/logo-vive.png" alt="Логотип VIVE" width="260" height="100">
         </li>
       </ul>
     </section>
@@ -274,7 +278,7 @@
         </p>
         <div>
           <h3 class="visually-hidden">Карта</h3>
-          <img src="https://via.placeholder.com/560x222" alt="Карта" width="560" height="222">
+          <img src="img/map 1.png" alt="Карта" width="560" height="222">
         </div>
         <button>напишите нам</button>
       </section>
@@ -283,7 +287,7 @@
   <footer>
     <div>
       <a>
-        <img src="https://via.placeholder.com/163x35" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
+        <img src="img/logo-yellow.svg" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
       </a>
       <ul>
         <li>
@@ -355,6 +359,7 @@
       </section>
       <a href="https://htmlacademy.ru">
         <span class="visually-hidden">HTML Academy</span>
+        <img src="img/logo_htmlacademy.svg" alt="Логотип HTML Academy" width="115" height="33">
       </a>
     </div>
   </footer>
