--- a/catalog.html
+++ b/catalog.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link href="normalize.css" rel="stylesheet">
+  <link href="style.css" rel="stylesheet">
   <link rel="icon" href="favicon-32.ico">
   <link rel="icon" href="img/favicon-32.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon-180.png">
@@ -12,7 +14,7 @@
 
 <body>
   <header>
-    <a>
+    <a href="/index.html">
       <img src="img/logo.svg" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
     </a>
     <div>
@@ -178,7 +180,7 @@
           <ul>
             <li>
               <div>
-                <img src="img/item-1 1.png" alt="Любительская селфи-палка" width="360" height="380">
+                <img src="img/item-1.png" alt="Любительская селфи-палка" width="360" height="380">
                 <svg width="62" height="62"></svg>
                 <div>
                   <h3>
@@ -200,7 +202,7 @@
             </li>
             <li>
               <div>
-                <img src="img/item-2 1.png" alt="Профессиональная селфи-палка" width="360" height="380">
+                <img src="img/item-2.png" alt="Профессиональная селфи-палка" width="360" height="380">
                 <svg width="62" height="62"></svg>
                 <div>
                   <h3>
@@ -222,7 +224,7 @@
             </li>
             <li>
               <div>
-                <img src="img/item-3 1.png" alt="Непотопляемая селфи-палка" width="360" height="380">
+                <img src="img/item-3.png" alt="Непотопляемая селфи-палка" width="360" height="380">
                 <svg width="62" height="62"></svg>
                 <div>
                   <h3>
@@ -244,7 +246,7 @@
             </li>
             <li>
               <div>
-                <img src="img/item-4 1.png" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
+                <img src="img/item-4.png" alt="Селфи-палка «Следуй за мной»" width="360" height="380">
                 <svg width="62" height="62"></svg>
                 <div>
                   <h3>
@@ -287,7 +289,7 @@
   </main>
   <footer>
     <div>
-      <a>
+      <a href="/index.html">
         <img src="img/logo-yellow.svg" alt="Логотип магазина гаджетов «Device»" width="163" height="35">
       </a>
       <ul>
