--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <form class="main-navigation__form" action="https://echo.htmlacademy.ru" method="post" name="search-form">
           <label for="user-search" class="visually-hidden">Поиск по сайту</label>
           <input class="main-navigation__input" type="text" id="user-search" name="search" placeholder="Поиск по сайту">
-          <button type="button">Найти</button>
+          <button class="main-navigation__button-form button" type="button">Найти</button>
         </form>
         <button class="main-navigation__button main-navigation__button--enter button" type="button">
           Войти
